바디에 마진 제거 + 마진 제거시 생기는 콘솔 크기 버그 고침 + 인덱스에 임시 환영 문구 추가 + 개요에 테두리 제거

--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,18 @@
             <div id="loading"></div>
             <div id="connect"></div>
             <div id="start"></div>
-            <p class = output>s</p>
+            <div id="welcome"></div>
+            <h1>Hello <span class="errorcode">TEAMLOG</span></h1>
+            <p class="output">팀로그 홈페이지에 오신것을 환영합니다!</p>
+            <p class="output">아래에 명령어를 입력해주세요</p>
+        
+            <form action="/" method="post">
+                <p class="input">
+                    <form action="/" method="post">
+                        <input class="input input-text">
+                    </form>
+                </p>
+            </form>
         </div>
     </div>
         
@@ -112,49 +123,54 @@
         <hr>
 
 
-        <h1 class="zizizik">자, 시간이 오고있습니다!</h1>
-        <h1 class="zizizik">3월 @일 여러분들의 신청을 기다리겠습니다!</h1>
+        
         <!-- <h1 class="zizizik">자, 시간이 왔습니다!</h1>
         <h1 class="zizizik">지금바로 신청하세요!</h1> -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 897 649" enable-background="new 0 0 897 649" xmlns:xlink="http://www.w3.org/1999/xlink">
-  
-            <g class="chevrons">
-              <path d="m570.9 154.3l-6.5-56-3.6.4 6.6 56 .4 3.6 3.5-.4 56.1-6.6-.4-3.5z" />
-              <path d="m443.6 112.6l-38.3-41.5-2.6 2.4 38.2 41.5 2.5 2.7 2.6-2.5 41.5-38.2-2.4-2.6z" />
-              <path d="m316 153.7l-55.3-11.1-.7 3.5 55.3 11.1 3.5.7.7-3.5 11.1-55.3-3.5-.7z" />
-              <path d="m237 262l-51.3 23.5 1.5 3.2 51.3-23.5 3.2-1.5-1.5-3.2-23.5-51.3-3.2 1.5z" />
-              <path d="m236.7 396l-27.7 49.2 3.1 1.7 27.7-49.2 1.7-3.1-3.1-1.7-49.2-27.7-1.7 3.1z" />
-              <path d="m315.2 504.6l6.5 56 3.6-.4-6.6-56-.4-3.6-3.5.4-56.1 6.6.4 3.5z" />
-              <path d="m442.5 546.3l38.3 41.5 2.6-2.4-38.2-41.5-2.4-2.7-2.7 2.5-41.5 38.2 2.4 2.6z" />
-              <path d="m570.1 505.2l55.3 11.1.7-3.5-55.3-11.1-3.5-.7-.7 3.5-11.1 55.3 3.5.7z" />
-              <path d="m649.1 396.9l51.3-23.5-1.5-3.2-51.3 23.5-3.2 1.5 1.5 3.2 23.5 51.3 3.3-1.5z" />
-              <path d="m649.4 262.9l27.7-49.2-3.1-1.7-27.7 49.2-1.7 3.1 3.1 1.7 49.2 27.7 1.7-3.1z" />
-            </g>
-            <g class="exterior">
-              <path d="m290.3 239.6l-92.5-53.4-.7 1.2 92.5 53.4c.2-.3.5-.7.7-1.2" />
-              <path d="m355 174.8l-53.1-92-1.2.7 53.1 92c.4-.2.8-.5 1.2-.7" />
-              <path d="m532.6 174.9l52.8-91.4-1.2-.7-52.8 91.4c.3.2.8.5 1.2.7" />
-              <path d="m443.7 151v-105.8h-1.4v105.8c.5 0 .9 0 1.4 0" />
-              <path d="m597.5 240.3l91.4-52.8-.7-1.2-91.5 52.7c.3.4.5.8.8 1.3" />
-              <path d="m442.3 505v107.1h1.4v-107.1c-.5 0-.9 0-1.4 0" />
-              <path d="m620.7 327.9c0 0 0 .1 0 0 0 .5 0 1 0 1.4h105.8v-1.4h-105.8" />
-              <path d="m530.8 482.1l53.3 92.3 1.2-.7-53.3-92.3c-.4.3-.8.5-1.2.7" />
-              <path d="m596.2 417.9l91.9 53.1.7-1.2-91.9-53.1c-.2.4-.5.8-.7 1.2" />
-              <path d="m354.3 480.8l-53.7 93 1.2.7 53.7-93c-.4-.2-.8-.5-1.2-.7" />
-              <path d="m266.7 328c0 0 0-.1 0 0l-107.2-.1v1.4h107.2c0-.4 0-.9 0-1.3" />
-              <path d="m290.1 416.1l-93 53.7.7 1.2 93-53.7c-.2-.4-.4-.8-.7-1.2" />
-            </g>
-            <path class="middle" d="m485.9 303l-40.9 23.6 23.6-40.9c-.4-.2-.8-.5-1.2-.7l-23.7 41v-47c-.5 0-.9 0-1.4 0v47l-23.3-40.3c-.4.2-.8.5-1.2.7l23.2 40.3-39.9-23c-.2.4-.5.8-.7 1.2l39.9 23h-45.6c0 0 0 .1 0 .1 0 .4 0 .9 0 1.3h45.6l-39.3 22.7c.2.4.5.8.7 1.2l39.3-22.7-22.7 39.4c.4.2.8.5 1.2.7l22.7-39.4v45.8c.5 0 .9 0 1.4 0v-45.7l23.1 40c.4-.2.8-.5 1.2-.7l-23.1-40 40.4 23.3c.2-.4.5-.8.7-1.2l-40.4-23.3h47c0-.4 0-.9 0-1.3 0 0 0-.1 0-.1h-47.1l40.9-23.6c.1-.5-.2-1-.4-1.4" fill="#444" />
-            <g class="circles" stroke-miterlimit="10">
-              <circle class="circle-1" cx="443" cy="429.2" r="100.3" />
-              <circle class="circle-2" cx="443" cy="385.2" r="57" />
-              <circle class="circle-3" cx="644.2" cy="328.2" r="81.9" />
-              <circle class="circle-4" cx="443.1" cy="175.5" r="128.7" />
-              <circle class="circle-5" cx="443.2" cy="112.6" r="57" />
-              <circle class="circle-6" cx="348.4" cy="328.9" r="81.9" />
-            </g>
-          </svg>
-          <div id="putter">
+        <div id="clock">
+            <div id="clock-text">
+                <h1 class="zizizik">자, 시간이 오고있습니다!</h1>
+                <h1 class="zizizik">3월 @일 여러분들의 신청을 기다리겠습니다!</h1>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 897 649" enable-background="new 0 0 897 649" xmlns:xlink="http://www.w3.org/1999/xlink">
+    
+                <g class="chevrons">
+                <path d="m570.9 154.3l-6.5-56-3.6.4 6.6 56 .4 3.6 3.5-.4 56.1-6.6-.4-3.5z" />
+                <path d="m443.6 112.6l-38.3-41.5-2.6 2.4 38.2 41.5 2.5 2.7 2.6-2.5 41.5-38.2-2.4-2.6z" />
+                <path d="m316 153.7l-55.3-11.1-.7 3.5 55.3 11.1 3.5.7.7-3.5 11.1-55.3-3.5-.7z" />
+                <path d="m237 262l-51.3 23.5 1.5 3.2 51.3-23.5 3.2-1.5-1.5-3.2-23.5-51.3-3.2 1.5z" />
+                <path d="m236.7 396l-27.7 49.2 3.1 1.7 27.7-49.2 1.7-3.1-3.1-1.7-49.2-27.7-1.7 3.1z" />
+                <path d="m315.2 504.6l6.5 56 3.6-.4-6.6-56-.4-3.6-3.5.4-56.1 6.6.4 3.5z" />
+                <path d="m442.5 546.3l38.3 41.5 2.6-2.4-38.2-41.5-2.4-2.7-2.7 2.5-41.5 38.2 2.4 2.6z" />
+                <path d="m570.1 505.2l55.3 11.1.7-3.5-55.3-11.1-3.5-.7-.7 3.5-11.1 55.3 3.5.7z" />
+                <path d="m649.1 396.9l51.3-23.5-1.5-3.2-51.3 23.5-3.2 1.5 1.5 3.2 23.5 51.3 3.3-1.5z" />
+                <path d="m649.4 262.9l27.7-49.2-3.1-1.7-27.7 49.2-1.7 3.1 3.1 1.7 49.2 27.7 1.7-3.1z" />
+                </g>
+                <g class="exterior">
+                <path d="m290.3 239.6l-92.5-53.4-.7 1.2 92.5 53.4c.2-.3.5-.7.7-1.2" />
+                <path d="m355 174.8l-53.1-92-1.2.7 53.1 92c.4-.2.8-.5 1.2-.7" />
+                <path d="m532.6 174.9l52.8-91.4-1.2-.7-52.8 91.4c.3.2.8.5 1.2.7" />
+                <path d="m443.7 151v-105.8h-1.4v105.8c.5 0 .9 0 1.4 0" />
+                <path d="m597.5 240.3l91.4-52.8-.7-1.2-91.5 52.7c.3.4.5.8.8 1.3" />
+                <path d="m442.3 505v107.1h1.4v-107.1c-.5 0-.9 0-1.4 0" />
+                <path d="m620.7 327.9c0 0 0 .1 0 0 0 .5 0 1 0 1.4h105.8v-1.4h-105.8" />
+                <path d="m530.8 482.1l53.3 92.3 1.2-.7-53.3-92.3c-.4.3-.8.5-1.2.7" />
+                <path d="m596.2 417.9l91.9 53.1.7-1.2-91.9-53.1c-.2.4-.5.8-.7 1.2" />
+                <path d="m354.3 480.8l-53.7 93 1.2.7 53.7-93c-.4-.2-.8-.5-1.2-.7" />
+                <path d="m266.7 328c0 0 0-.1 0 0l-107.2-.1v1.4h107.2c0-.4 0-.9 0-1.3" />
+                <path d="m290.1 416.1l-93 53.7.7 1.2 93-53.7c-.2-.4-.4-.8-.7-1.2" />
+                </g>
+                <path class="middle" d="m485.9 303l-40.9 23.6 23.6-40.9c-.4-.2-.8-.5-1.2-.7l-23.7 41v-47c-.5 0-.9 0-1.4 0v47l-23.3-40.3c-.4.2-.8.5-1.2.7l23.2 40.3-39.9-23c-.2.4-.5.8-.7 1.2l39.9 23h-45.6c0 0 0 .1 0 .1 0 .4 0 .9 0 1.3h45.6l-39.3 22.7c.2.4.5.8.7 1.2l39.3-22.7-22.7 39.4c.4.2.8.5 1.2.7l22.7-39.4v45.8c.5 0 .9 0 1.4 0v-45.7l23.1 40c.4-.2.8-.5 1.2-.7l-23.1-40 40.4 23.3c.2-.4.5-.8.7-1.2l-40.4-23.3h47c0-.4 0-.9 0-1.3 0 0 0-.1 0-.1h-47.1l40.9-23.6c.1-.5-.2-1-.4-1.4" fill="#444" />
+                <g class="circles" stroke-miterlimit="10">
+                <circle class="circle-1" cx="443" cy="429.2" r="100.3" />
+                <circle class="circle-2" cx="443" cy="385.2" r="57" />
+                <circle class="circle-3" cx="644.2" cy="328.2" r="81.9" />
+                <circle class="circle-4" cx="443.1" cy="175.5" r="128.7" />
+                <circle class="circle-5" cx="443.2" cy="112.6" r="57" />
+                <circle class="circle-6" cx="348.4" cy="328.9" r="81.9" />
+                </g>
+            </svg>
+        </div>
+        <div id="putter">
             <div class="open-source">
                 Open source used : 
                 <br>
