--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,10 +6,11 @@ html {
 }
 
 body {
-    margin: 110px;
+    margin: 0;
     box-sizing: border-box;
     height: 100%;
-    background-color: #FFFFFF;
+    background-color: #000000;
+    background-image: radial-gradient(#11581e, #041607);
 }
 
 #console-font {
@@ -541,7 +542,7 @@ svg { width: 100%; } svg .chevrons { fill: #777; transform-origin: 50% 50%; anim
 #introduction {
     margin: 0 0 100px;
     padding: 25px 50px 50px;
-    border: 8px dashed #328bf6;
+    /* border: 8px dashed #328bf6; */
     color: #fff;
     background: #181c20;
     box-shadow: 0 0 0 #1f3c5f;
@@ -573,6 +574,7 @@ svg { width: 100%; } svg .chevrons { fill: #777; transform-origin: 50% 50%; anim
     border: 3px solid #181c20;
     padding: 25px;
     text-align: left;
+    vertical-align: middle;
     background-image: url(../images/part-bg.png)
 }
 .small-part {
@@ -584,6 +586,7 @@ svg { width: 100%; } svg .chevrons { fill: #777; transform-origin: 50% 50%; anim
     border: 3px solid #181c20;
     padding: 25px;
     text-align: left;
+    vertical-align: middle;
     background-image: url(../images/part-bg.png)
 }
 .part-verticality-emphasis {
@@ -641,4 +644,11 @@ svg { width: 100%; } svg .chevrons { fill: #777; transform-origin: 50% 50%; anim
 .teamlog {
     flex: 5;
     text-align: right;
+}
+#clock {
+    position: relative;
+}
+#clock-text {
+    position: relative;
+    top: 50%;
 }
