--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,6 +11,7 @@ body {
     height: 100%;
     background-color: #000000;
     background-image: radial-gradient(#11581e, #041607);
+    overflow: hidden;
 }
 
 #console-font {
@@ -65,12 +66,12 @@ body {
 .terminal {
     box-sizing: inherit;
     position: absolute;
-    height: 100%;
+    max-height: 100vh;
     width: 1000px;
     max-width: 100%;
     padding: 4rem;
     text-transform: uppercase;
-    background-image: radial-gradient(#11581e, #041607);
+    overflow: hidden;
 }
 
 .output {
@@ -523,7 +524,7 @@ svg { width: 100%; } svg .chevrons { fill: #777; transform-origin: 50% 50%; anim
 
 #no-console {
     position: relative;
-    top: 100vh;
+    /* top: 100vh; */
     height: auto;
     padding: 150px 64px 0;
     font-family: 'Noto Sans KR', sans-serif;
