--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,7 @@
 @import "https://fonts.googleapis.com/css?family=Inconsolata";
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 html {
-    min-height: 100%;
+    height: 100%;
     margin: 0;
 }
 
