--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -530,6 +530,24 @@ svg { width: 100%; } svg .chevrons { fill: #777; transform-origin: 50% 50%; anim
     font-family: 'Noto Sans KR', sans-serif;
     background-color: #eaeaea;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.08' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+    /* animation: loading-end 6000s 4s; */
+    /* overflow: hidden; */
+}
+@keyframes loading-end {
+    0% {
+        height: 0;
+        padding: auto 64px 0;
+    }
+    0.09% {
+        padding: auto 64px 0;
+    }
+    0.1% {
+        height: auto;
+        padding: 150px 64px 0;
+    }
+    100% {
+        height: auto;
+    }
 }
 
 #no-console h1 {
@@ -651,5 +669,8 @@ svg { width: 100%; } svg .chevrons { fill: #777; transform-origin: 50% 50%; anim
 }
 #clock-text {
     position: relative;
-    top: 50%;
+    top: 500px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #ffffff;
+    padding: 50px 0;
 }
