--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,8 @@
             <div id="connect"></div>
             <div id="start"></div>
             <div id="welcome"></div>
+ -->
+<!-- 
             <h1>Hello <span class="errorcode">TEAMLOG</span></h1>
             <p class="output">팀로그 홈페이지에 오신것을 환영합니다!</p>
             <p class="output">아래에 명령어를 입력해주세요</p>
@@ -41,9 +43,11 @@
                     </form>
                 </p>
             </form>
-        </div>
-    </div>
  -->
+<!--  
+        </div>
+    </div> -->
+
 
 
 
