로딩화면 작동 됨 + 새로고침시 스크롤 가장 위로 + 자바스크립트 작동하지 않아도 화면을 보는데 지장이 없음

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
 </head>
     <!-- 수화를 구사하시면 칭찬해드립니다. -->
 <body>
-<!-- 
+
     <div id="console-font">
         <div class="overlay"></div>
         <div class="terminal">
@@ -30,7 +30,7 @@
             <div id="connect"></div>
             <div id="start"></div>
             <div id="welcome"></div>
- -->
+
 <!-- 
             <h1>Hello <span class="errorcode">TEAMLOG</span></h1>
             <p class="output">팀로그 홈페이지에 오신것을 환영합니다!</p>
@@ -42,11 +42,11 @@
                         <input class="input input-text">
                     </form>
                 </p>
-            </form>
- -->
-<!--  
+            </form> -->
+
+ 
         </div>
-    </div> -->
+    </div>
 
 
 
