--- a/views/index.html
+++ b/views/index.html
@@ -129,12 +129,14 @@
 
 
         
-        <!-- <h1 class="zizizik">자, 시간이 왔습니다!</h1>
-        <h1 class="zizizik">지금바로 신청하세요!</h1> -->
         <div id="clock">
             <div id="clock-text">
-                <h1 class="zizizik">자, 시간이 오고있습니다!</h1>
-                <h1 class="zizizik">3월 @일 여러분들의 신청을 기다리겠습니다!</h1>
+                <!-- <h1 class="zizizik">자, 시간이 왔습니다!</h1>
+                <h1 class="zizizik">지금바로 신청하세요!</h1> -->
+                <div>
+                    <h1 class="zizizik">자, 시간이 오고있습니다!</h1>
+                    <h1 class="zizizik">3월 @일 여러분들의 신청을 기다리겠습니다!</h1>
+                </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 897 649" enable-background="new 0 0 897 649" xmlns:xlink="http://www.w3.org/1999/xlink">
     
